--- a/src/partials/nav-primary/_nav-primary.scss
+++ b/src/partials/nav-primary/_nav-primary.scss
@@ -121,6 +121,7 @@ $nav-font-color: #F5F5F5;
 				margin-top: 100px;
 				display: flex;
 				flex-direction: column;
+				text-align: right;
 			}
 			.nav-primary__secondary {
 
